# agent_agent

./: .gitattributes  .gitignore  CLAUDE.md  pyproject.toml  readme.md
.claude/commands/: audit-ephemeral-repos.md
docs/: CLAUDE.md  agent-permissions.md  context-passing.md  cost-and-token-budgets.md  dev-prod-separation.md  error-handling-and-recovery.md  human-checkpoints.md  integration-testing.md  integration-tests-plan.md  merge-conflict-resolution.md  observability.md  setup.md  state-persistence.md
docs/architecture/: INDEX.md  data-models.md  dependencies.md  fixture-strategy.md  implementation-plan.md  integration-test-fixtures.md  integration-testing.md  mvp-architecture.md  phase-4-human-questions.md  phase-4-implementation-spec.md  phase-4-plan.md  phase-4-planning-spec.md  phase-4-policy-review.md  phase-4-technical-review.md  policy-fixture-candidates.md  policy-review-testing.md  policy-reviewer-decisions.md
docs/best practices/: INDEX.md  agent-policy-compliance.md  claude-md-best-practices.md  claude-md-context-strategy.md  dev-prod-separation.md  distributed-worker-management.md  git-repo-test-fixtures.md  github-repo-fixtures.md
docs/goals/: goals.md
docs/good policies/: 01-dag-orchestration.md  02-subtask-decomposition.md  03-agent-type-taxonomy.md  04-merge-integration.md  08-escalation-policy.md  14-granular-agent-decomposition.md  16-minimal-interactive-oversight.md  20-node-execution-model.md
docs/policies/: 01-dag-orchestration.md  02-subtask-decomposition.md  03-agent-type-taxonomy.md  04-agent-node-mapping.md  04-merge-integration.md  05-context-management.md  05-context-passing.md  06-escalation-policy.md  06-merge-ordering.md  07-budget-allocation.md  07-retry-policy.md  08-escalation-policy.md  08-granular-agent-decomposition.md  09-budget-allocation.md  09-minimal-interactive-oversight.md  10-node-execution-model.md  10-planning-agent.md  11-observability.md  11-review-agent-authority.md  12-shared-context.md  12-worker-management.md  13-context-negotiation.md  14-granular-agent-decomposition.md  15-durable-dag-execution.md  16-minimal-interactive-oversight.md  17-merge-conflict-resolution.md  18-state-persistence-boundaries.md  19-composite-nodes.md  POLICY_INDEX.md  context-policy-summary.md  response.md
docs/standardization/: INDEX.md  github-repo-integration-testing.md  index-construction.md
docs/theory/: INDEX.md  design-goals-vs-design-guidance.md  policies-as-solution-space-constraints.md
docs/workflows/: INDEX.md  fixture-workflow.md  issue-resolution-team.md
scripts/: run_sdk_tests.sh
src/agent_agent/: budget.py  cli.py  config.py  observability.py  orchestrator.py  server.py  state.py  (+1 more)
tests/: conftest.py  test_budget.py
(+73 files in other folders)
