[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "claude-agent-sdk>=0.1.48",
]

[project.scripts]
agent-agent = "agent_agent.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=0.6",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 300
markers = [
    "github: tests that require GITHUB_TOKEN and create real GitHub resources",
    "sdk: tests that require ANTHROPIC_API_KEY and make real SDK calls",
    "integration: end-to-end tests requiring AGENT_AGENT_FIXTURE_BOT_TOKEN + GITHUB_TOKEN + ANTHROPIC_API_KEY",
]
addopts = "-m 'not integration'"
